# space

./: CMakeLists.txt  Camera.cpp  Camera.h  main.cpp
Entities/: MultiThreadWorld.cpp  MultiThreadWorld.h  Object.cpp  Object.h  OmpWorld.cpp  OmpWorld.h  SingleThreadWorld.cpp  SingleThreadWorld.h  World.cpp  World.h
misc/: ext_math.cpp  ext_math.h  mpmc_queue.h
space/: cam.py  constants.py  space.py  space.pyproj  space.sln
